Fixed alignment added newsletter section

--- a/src/style.css
+++ b/src/style.css
@@ -66,9 +66,9 @@ h2 {
   font-size: var(--fontSize-5);
 }
 
-h3 {
+/* h3 {
   font-size: var(--fontSize-4);
-}
+} */
 
 h4 {
   font-size: var(--fontSize-3);
@@ -601,6 +601,6 @@ header[class*="header"] nav ul a:hover {
 
   section[class*="BlogPosts"] {
     width: 100%;
-    padding: var(--spacing-4) var(--spacing-0) var(--spacing-4) var(--spacing-4);
+    padding: var(--spacing-4) var(--spacing-0) var(--spacing-4);
   }
 }
